my first update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <body>
         <h1>100 days learning challenge ..</h1>
         <p>Yes ,I will do practice ...</p>
+        <ol>
+            <li>html</li>
+            <li>css</li>
+            <li>bootstrap</li>
+            <li>javascript</li>
+            <li>react</li>
+            <li>firebase</li>
+                
+        </ol>
 
     </body>
      
